changed brand image to png to avoid svg scaling issues on IE until I figure out what is going on there

--- a/css/creative.css
+++ b/css/creative.css
@@ -190,9 +190,11 @@ aside {
   }
 
   .navbar-brand{
-    max-height: 65%;
-    max-width: 65%;
+    max-height: 75%;
+    max-width: 75%;
   }
+
+
   .navbar-default .navbar-header .navbar-brand:hover,
   .navbar-default .navbar-header .navbar-brand:focus {
     color: orange;
